pyilper (1.8.2) bionic; urgency=medium

  * python 3.8 compatibility 
  * Corrected the drive name to "HP9114B" in the drive type selection box of the drive tab.

 -- bionic <achim@trillian>  Mon, 03 Feb 2020 10:12:05 +0100

pyilper (1.8.1) bionic; urgency=medium

  * added/improved HP-75 text and lex file support in the file management functions of the drive tab

 -- bionic <achim@trillian>  Fri, 31 May 2019 13:39:08 +0200

pyilper (1.8.0) bionic; urgency=medium

  * added HP2225 thermal printer emulator
  * added HP-75 terminal and keyboard support
  * refactoring in lifexec: moved to the subprocess.run interface
  * minimum required Python version is now 3.5

 -- bionic <achim@trillian.trilldom.lan>  Sun, 30 Dec 2018 12:24:08 +0100

pyilper (1.7.2-ubuntu1) bionic; urgency=medium

  * production 

 -- trusty <achim@trillian.trilldom.lan>  Mon, 20 Aug 2018 08:43:17 +0200

pyilper (1.7.2~beta2) bionic; urgency=medium

  *  beta 1

 -- trusty <achim@trillian.trilldom.lan>  Sat, 04 Aug 2018 10:06:22 +0200

pyilper (1.6.0-ubuntu1) xenial; urgency=medium

  * production

 -- trusty <achim@trillian>  Mon, 27 Nov 2017 12:06:11 +0100

pyilper (1.6.0~beta3) xenial; urgency=medium

  * third beta of 1.6.0 

 -- trusty <achim@trillian>  Sun, 12 Nov 2017 19:44:51 +0100

pyilper (1.6.0~beta2) xenial; urgency=medium

  * second beta of 1.6.0

 -- trusty <achim@trillian>  Thu, 05 Oct 2017 17:16:59 +0200

pyilper (1.6.0~beta1) xenial; urgency=medium

  * first beta of 1.6.0

 -- trusty <achim@trillian>  Sun, 01 Oct 2017 10:05:36 +0200

pyilper (1.5.0~ubuntu1) xenial; urgency=medium

  * new online manual 

 -- trusty <achim@trillian>  Thu, 16 Mar 2017 20:39:36 +0100

pyilper (1.5.0~beta1) xenial; urgency=medium

  * transition to qt5 

 -- trusty <achim@trillian>  Fri, 03 Feb 2017 09:40:03 +0100

pyilper (1.4.0~ubuntu1) xenial; urgency=medium

  * production release 
  * bugfix in piltcpip.py
  * enabled python 3.6
  * new experimental version of PILTERM