@@ -280,7 +280,8 @@ an import for the HP-71 and the import for the HP-41 wich needs special handling
 <h3 class="w3-text-teal">pyILPER 1.8.2</h3>
 <ul class="w3-ul">
 <li>Python 3.8 compatibility</li>
-<li><li>Corrected the drive name to "HP9114B" in the drive type selection box of the drive tab.</li>
+ <li>Fixed wrong address view for addresses &gt; 15 and changed device # address view to HP71 style in the virtual HP-IL device status window (courtesy by Christoph Gießelink)</li>
+<li>Clear device buffers on LIF Image file change and clear disk drive status after successful reading or writing (hint from Christoph Gießelink)</li>
 </ul>
 
 <!-- End content -->
