@@ -32,7 +32,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
 <ul class="w3-ul">
 <li>Python 3.8 compatibility</li>
-<li>Corrected the drive name to "HP9114B" in the drive type selection box of the drive tab.</li>
+<li>Corrected the drive name to "HP9114B" in the drive type selection box of the drive tab (hint from Christoph Gießelink)</li>
+ <li>Fixed wrong address view for addresses &gt; 15 and changed device # address view to HP71 style in the virtual HP-IL device status window (courtesy by Christoph Gießelink)</li>
+<li>Clear device buffers on LIF Image file change and clear disk drive status after successful reading or writing (hint from Christoph Gießelink)</li>
 </ul>
 <!-- End content -->
 
