@@ -1175,7 +1175,16 @@ class cls_LifDirWidget(QtWidgets.QWidget):
 # 28.01.2017 jsi
 # - removed self.__islocked__ in cls_pildrive because it hides the
 #   variable of cls_pildevbase
-
+# 16.02.2020 jsi
+# - call self.__clear_device__ if medium (lif image file) was changed. 
+#   Clear the content of both buffers in the device clear subroutine 
+#   (hint by Christoph Gießelink) 
+# - clear disk drive status after successful reading or writing
+#   (hint by Christoph Gießelink) 
+# - call self.__setstatus__ instead of setting the status variable directly
+# - return write protect error in wrec if write to file fails instead of 
+#   error code 29
+#
 
 
 class cls_pildrive(cls_pildevbase):
@@ -1262,6 +1271,7 @@ class cls_pildrive(cls_pildevbase):
       self.__surfaces__= surfaces
       self.__blocks__= blocks
       self.__nbe__= tracks*surfaces*blocks
+
       k=0
       for i in (24,16,8,0):
          self.__lif__[k]= tracks >> i & 0xFF
@@ -1272,6 +1282,14 @@ class cls_pildrive(cls_pildevbase):
       for i in (24,16,8,0):
          self.__lif__[k]= blocks >> i & 0xFF
          k+=1
+      self.__clear_device__()
+      self.__setstatus__(0)   
+#
+#     Note: the device status should be 23 (new media) here. This status
+#     is reset to zero after a SST was processed by the real drive which has not
+#     been implemented in pildevbase.py so far. Without that at least the
+#     HP-71B hangs on media initialization.
+#
       return
 #
 # set aid and did of device
@@ -1313,7 +1331,7 @@ class cls_pildrive(cls_pildevbase):
       self.__access_lock__.acquire()
       if self.__islocked__:
          self.__access_lock__.release()
-         self.__status__= 20   # no medium error
+         self.__setstatus__(20)   # no medium error
          return
       try:
          if self.__isWindows__:
@@ -1325,16 +1343,16 @@ class cls_pildrive(cls_pildevbase):
          os.close(fd)
          l=len(b)
 #        print("rrec record %d size %d" % (self.__pe__,l))
+         self.__setstatus__(0)   # success, clear status
          for i in range (l):
             self.__buf0__[i]= b[i]
          if l < 256:
             for i in range(l,256):
                self.__buf0__[i]=0x00
       except OSError as e:
-         self.__status__= 20
+         self.__setstatus__(20)  # failed read always returns no medium error
       self.__access_lock__.release()
       return
-
 #
 # fix the header if record 0 (LIF header) is written
 #
@@ -1381,7 +1399,7 @@ class cls_pildrive(cls_pildevbase):
       self.__access_lock__.acquire()
       if self.__islocked__:
          self.__access_lock__.release()
-         self.__status__= 20 # no medium error
+         self.__setstatus__(20) # no medium error
          return
       try:
          if self.__isWindows__:
@@ -1396,11 +1414,14 @@ class cls_pildrive(cls_pildevbase):
             os.write(fd,self.__buf0__)
             self.__modified__= True
             self.__timestamp__= time.time()
+            self.__setstatus__(0)   # success, clear status
          except OSError as e:
-            self.__status__= 24
+            self.__setstatus__(29)  # write error always returns write protect
+                                    # error
          os.close(fd)
       except OSError as e:
-         self.__status__= 29
+         self.__setstatus__(29) # file open failed always returns write 
+                                # protect error
       self.__access_lock__.release()
       return
 
@@ -1416,7 +1437,7 @@ class cls_pildrive(cls_pildevbase):
       self.__access_lock__.acquire()
       if self.__islocked__:
          self.__access_lock__.release()
-         self.__status__= 20 # no medium error
+         self.__setstatus__(20) # no medium error
          return
       try:
          if self.__isWindows__:
@@ -1427,8 +1448,10 @@ class cls_pildrive(cls_pildevbase):
             os.write(fd,b)
          os.close(fd)
          self.__timestamp__= time.time()
+         self.__setstatus__(0)   # success, clear status
       except OSError:
-         self.__status__= 29
+         self.__setstatus__(29)  # failed file creation and initialization 
+                                 # always returns write protect error
       self.__access_lock__.release()
       return
 #
@@ -1443,6 +1466,15 @@ class cls_pildrive(cls_pildevbase):
       self.__access_lock__.acquire()
       self.__modified__= False
       self.__access_lock__.release()
+#
+#     Initialize/Invalidate buffer content. The HP-41 as controller uses
+#     buf 1 as a directory cache.
+#
+      for i in range (256):
+         self.__buf0__[i]= 0x0;
+         self.__buf1__[i]= 0x0;
+      return
+
 
 #
 # receive data to disc according to DDL command
@@ -1480,9 +1512,9 @@ class cls_pildrive(cls_pildevbase):
             self.__pe0__= self.__pe0__ | n
             if self.__pe0__ < self.__nbe__:
                self.__pe__= self.__pe0__
-               self.__status__= 0
+               self.__setstatus__(0)
             else:
-               self.__status__= 28
+               self.__setstatus__(28)
             self.__fpt__= False
          else:
             self.__pe0__= self.__pe0__ & 255
